--- a/examples/box_example.ipynb
+++ b/examples/box_example.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO8RPa0kKb0WXt9wIRoFxV7",
+      "authorship_tag": "ABX9TyM/GJbYjJG7HqWmyEu6v0pp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +44,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!git clone www.github.com/mfischer-ucl/prdpt "
+      ],
+      "metadata": {
+        "id": "nV_ObyU2KKK4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import torch\n",
         "import functools\n",
         "import numpy as np\n",
@@ -52,147 +62,19 @@
         "\n",
         "device = 'cpu'\n",
         "\n",
-        "\n",
-        "def grad_of_gaussiankernel(x, sigma):\n",
-        "    grad_of_gauss = -(x / sigma ** 2) * calc_gauss(x, mu=0.0, sigma=sigma)\n",
-        "    return grad_of_gauss\n",
-        "\n",
-        "\n",
-        "def calc_gauss(x, mu=0.0, sigma=1.0):\n",
-        "    return 1.0 / (sigma * np.sqrt(2.0 * np.pi)) * torch.exp(-0.5 * ((x - mu) / sigma) ** 2)\n",
-        "\n",
-        "\n",
-        "def mc_estimate(f_xi, p_xi):\n",
-        "    N = f_xi.shape[0]\n",
-        "    estimate = 1. / N * (f_xi / p_xi).sum(dim=0)  # average along batch axis, leave dimension axis unchanged\n",
-        "    return estimate\n",
-        "\n",
-        "\n",
-        "def convolve(kernel_fn, render_fn, importance_fn, theta, nsamples, context_args, *args):\n",
-        "    # sample, get kernel(samples), get render(samples), return mc estimate of output\n",
-        "\n",
-        "    dim = theta.shape[-1]\n",
-        "    sigma = context_args['sigma']\n",
-        "\n",
-        "    tau, pdf = importance_fn(nsamples, sigma, context_args['antithetic'], dim, device=context_args['device'])\n",
-        "\n",
-        "    weights = kernel_fn(tau, sigma)\n",
-        "\n",
-        "    if context_args['antithetic']:\n",
-        "        nsamples *= 2  # twice as many samples when antithetic\n",
-        "\n",
-        "    theta_p = torch.cat([theta] * nsamples, dim=0) - tau  # shift samples around current param\n",
-        "\n",
-        "    renderings, avg_img = render_fn(theta_p, context_args)    # output shape [N]\n",
-        "\n",
-        "    output = renderings.unsqueeze(-1) * weights     # weight output by kernel\n",
-        "    forward_output = mc_estimate(output, pdf)\n",
-        "\n",
-        "    return forward_output, avg_img\n",
-        "\n",
-        "\n",
-        "def importance_gradgauss(n_samples, sigma, is_antithetic, dim, device):\n",
-        "    eps = 0.00001\n",
-        "    randoms = torch.rand(n_samples, dim).to(device)\n",
-        "\n",
-        "    def icdf(x, sigma):\n",
-        "        res = torch.zeros_like(x)\n",
-        "        res[mask == 1] = torch.sqrt(-2.0 * sigma ** 2 * torch.log(2.0 * (1.0 - x[mask == 1])))\n",
-        "        res[mask == -1] = torch.sqrt(-2.0 * sigma ** 2 * torch.log(2.0 * x[mask == -1]))\n",
-        "        return res\n",
-        "\n",
-        "    # samples and AT samples\n",
-        "    if is_antithetic:\n",
-        "        randoms = torch.cat([randoms, 1.0 - randoms])\n",
-        "\n",
-        "    # avoid NaNs bc of numerical instabilities in log\n",
-        "    randoms[torch.isclose(randoms, torch.ones_like(randoms))] -= eps\n",
-        "    randoms[torch.isclose(randoms, torch.zeros_like(randoms))] += eps\n",
-        "    randoms[torch.isclose(randoms, torch.full_like(randoms, fill_value=0.5))] += eps\n",
-        "    randoms[torch.isclose(randoms, torch.full_like(randoms, fill_value=-0.5))] -= eps\n",
-        "\n",
-        "    mask = torch.where(randoms < 0.5, -1.0, 1.0)\n",
-        "    x_i = icdf(randoms, sigma=sigma) * mask\n",
-        "\n",
-        "    f_xi = torch.abs(x_i) * (1.0 / sigma ** 2) * calc_gauss(x_i, mu=0.0, sigma=sigma)\n",
-        "    f_xi[f_xi == 0] += eps\n",
-        "    p_xi = 0.5 * sigma * np.sqrt(2.0 * np.pi) * f_xi\n",
-        "\n",
-        "    return x_i, p_xi\n",
-        "\n",
-        "\n",
-        "def smoothFn(func=None, context_args=None, device='cuda'):\n",
-        "    if func is None:\n",
-        "        return functools.partial(smoothFn, context_args=context_args, device=device)\n",
-        "\n",
-        "    @functools.wraps(func)\n",
-        "    def wrapper(input_tensor, context_args, *args):\n",
-        "        class SmoothedFunc(torch.autograd.Function):\n",
-        "\n",
-        "            @staticmethod\n",
-        "            def forward(ctx, input_tensor, context_args, *args):\n",
-        "\n",
-        "                original_input_shape = input_tensor.shape\n",
-        "                importance_fn = importance_gradgauss\n",
-        "\n",
-        "                forward_output, avg_img = convolve(grad_of_gaussiankernel, func, importance_fn, input_tensor,\n",
-        "                                                   context_args['nsamples'], context_args, args)\n",
-        "\n",
-        "                # save for bw pass\n",
-        "                ctx.fw_out = forward_output\n",
-        "                ctx.original_input_shape = original_input_shape\n",
-        "\n",
-        "                return forward_output.mean(), avg_img\n",
-        "\n",
-        "            @staticmethod\n",
-        "            def backward(ctx, dy, dz):\n",
-        "                # dz is grad for avg_img\n",
-        "\n",
-        "                # Pull saved tensors\n",
-        "                original_input_shape = ctx.original_input_shape\n",
-        "                fw_out = ctx.fw_out\n",
-        "                grad_in_chain = dy * fw_out\n",
-        "\n",
-        "                return grad_in_chain.reshape(original_input_shape), None\n",
-        "\n",
-        "        return SmoothedFunc.apply(input_tensor, context_args, *args)\n",
-        "\n",
-        "    return wrapper\n",
-        "\n",
-        "\n",
-        "def render_smooth(perturbed_theta, ctx_args):\n",
-        "    with torch.no_grad():\n",
-        "        imgs, losses = [], []\n",
-        "        for j in range(perturbed_theta.shape[0]):       # for each sample\n",
-        "            perturbed_img = get_rendering(perturbed_theta[j, :])\n",
-        "            perturbed_loss = torch.nn.MSELoss()(perturbed_img, ctx_args['gt_image'])\n",
-        "            imgs.append(perturbed_img)\n",
-        "            losses.append(perturbed_loss)\n",
-        "\n",
-        "        avg_img = torch.mean(torch.cat([x.unsqueeze(0) for x in imgs], dim=0), dim=0)\n",
-        "        loss = torch.stack(losses)\n",
-        "    return loss, avg_img\n",
-        "\n",
-        "\n",
-        "def update_sigma_linear(it, sigma_0, sigma_min, n=400, const_first=100):\n",
-        "    return sigma_0 - (it - const_first) * (sigma_0 - sigma_min) / (n - const_first)\n",
-        "\n",
-        "\n",
-        "def run_scheduler_step(curr_sigma, curr_iter, sigma_initial, sigma_min, n, const_first_n, const_last_n=None):\n",
-        "    n_real = n - const_last_n if const_last_n else n\n",
-        "    newsigma = update_sigma_linear(curr_iter, sigma_initial, sigma_min, n_real, const_first_n)\n",
-        "    return newsigma\n",
-        "\n",
-        "\n",
-        "def plt_errors(img_errs, param_errs, title):\n",
-        "    imax, pmax = max(img_errs), max(param_errs)\n",
-        "    plt.plot([x / pmax for x in param_errs], c='blue', label='Param. MSE (norm.)')\n",
-        "    plt.plot([x / imax for x in img_errs], c='orange', label='Img. MSE (norm.)')\n",
-        "    plt.title(title)\n",
-        "    plt.legend()\n",
-        "    plt.show()\n",
-        "\n",
-        "\n",
+        "from utils_fns import *\n",
+        "from utils_general import update_sigma_linear, run_scheduler_step, plt_errors, show_with_error"
+      ],
+      "metadata": {
+        "id": "xkDJNiK59ZnJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Set up renderer\n",
         "def get_rendering(theta): \n",
         "  return draw_rect(theta[0], theta[1])\n",
         "\n",
@@ -205,23 +87,23 @@
         "  return torch.flipud(image.clamp(0, 1))\n",
         "\n",
         "\n",
-        "def plot(curr, ref, blurred_img=None): \n",
-        "  fig, ax = plt.subplots(1, 3 if blurred_img is None else 4)\n",
-        "  mae = torch.abs(curr-ref)\n",
-        "  if blurred_img is None: \n",
-        "    titles, images = ['Current', 'Reference', 'MAE'], [curr, ref, mae]\n",
-        "  else: \n",
-        "    titles, images = ['Current', 'Current Blurred', 'Reference', 'MAE'], [curr, blurred_img, ref, mae]\n",
-        "  for j, (t, img) in enumerate(zip(titles, images)): \n",
-        "    ax[j].imshow(img.detach().cpu().numpy())\n",
-        "    ax[j].set_title(t)\n",
-        "    ax[j].axis('off')\n",
-        "  plt.show()"
+        "def render_smooth(perturbed_theta, ctx_args):\n",
+        "  with torch.no_grad():\n",
+        "      imgs, losses = [], []\n",
+        "      for j in range(perturbed_theta.shape[0]):       # for each sample\n",
+        "          perturbed_img = get_rendering(perturbed_theta[j, :])\n",
+        "          perturbed_loss = torch.nn.MSELoss()(perturbed_img, ctx_args['gt_image'])\n",
+        "          imgs.append(perturbed_img)\n",
+        "          losses.append(perturbed_loss)\n",
+        "\n",
+        "      avg_img = torch.mean(torch.cat([x.unsqueeze(0) for x in imgs], dim=0), dim=0)\n",
+        "      loss = torch.stack(losses)\n",
+        "  return loss, avg_img\n"
       ],
       "metadata": {
-        "id": "xkDJNiK59ZnJ"
+        "id": "e_YteNwOLX19"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +147,7 @@
         "id": "epa80Shd9xHa",
         "outputId": "7f498cd9-67ab-45e8-ebb2-48290bea296c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +162,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plot(init_img, ref_img)\n",
+        "show_with_error(init_img, ref_img)\n",
         "plt.rcParams['figure.figsize'] = (12, 6)\n",
         "\n",
         "# set up smoothed renderer\n",
@@ -294,7 +176,7 @@
         "for j in range(hparams['epochs']):\n",
         "    optim.zero_grad()\n",
         "\n",
-        "    loss, img_avg = get_smoothed_loss(theta.unsqueeze(0), ctx_args)\n",
+        "    loss, _ = get_smoothed_loss(theta.unsqueeze(0), ctx_args)\n",
         "    loss.backward()\n",
         "\n",
         "    optim.step()\n",
@@ -316,7 +198,7 @@
         "      print(f\"Iter {j+1}/{hparams['epochs']} - Img.Loss: {img_loss:.4f} - Param.Loss: {param_loss:.4f}\")\n",
         "\n",
         "    if (j+1) % 50 == 0: \n",
-        "      plot(img_curr, ref_img, img_avg)\n",
+        "      show_with_error(img_curr, ref_img, img_avg)\n",
         "      plt_errors(img_errors, param_errors, title=f'Iter {j+1}')"
       ],
       "metadata": {
@@ -327,7 +209,7 @@
         "id": "nooE07Qn-Qge",
         "outputId": "23c7110f-b8ab-4a9d-b586-6d6a91cdbd0e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
